# ripunzip

./: Cargo.toml  README.md  trial-file.sh  trial-uri.sh  trial.sh  trydownload.sh
.github/workflows/: ci.yml  create_release.yml
benches/: ripunzip_benchmark.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_ripunzip.rs
src/: cloneable_seekable_reader.rs  lib.rs  main.rs  unzip.rs
src/unzip/: charting_read_plotter.rs  cloneable_seekable_reader.rs  http_range_reader.rs  mod.rs  progress_updater.rs  seekable_http_reader.rs  test_utils.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
