# Copyright 2022 Google LLC
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
# https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ripunzip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.2"
itertools = "0.10.5"
log = "0.4.17"
monitor = "0.1.0"
rayon = "1.6.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
tempfile = "3.3.0"
thiserror = "1.0.37"
zip = "0.6.3"

[dev-dependencies]
hexdump = "0.1.1"
httptest = "0.15"
http = "0.2.8"
hyper = "0.14.23"
regex = "1.7.0"
test-log = "0.2.11"

[lib]
name = "ripunzip"
path = "src/lib.rs"

[[bin]]
name = "ripunzip"
path = "src/main.rs"
