# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "ripunzip"
version = "1.2.2"
edition = "2021"
authors = ["Adrian Taylor <adetaylor@chromium.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A tool to unzip an archive in parallel"
repository = "https://github.com/google/ripunzip"
rust-version = "1.70"

[features]
real_world_benchmark = []

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
env_logger = "0.11.5"
indicatif = "0.17.8"
itertools = "0.13.0"
log = "0.4.22"
monitor = "0.1.0"
progress-streams = "1.1.0"
ranges = "0.4.0"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
rustix = { version = "0.38.34", features = ["alloc"] }
tempfile = "3.11.0"
thiserror = "1.0.63"
wildmatch = "2.3.4"
zip = "2.1.6"

[dev-dependencies]
hexdump = "0.1.2"
httptest = "0.16.1"
http = "1.1.0"
hyper = "1.4.1"
test-log = "0.2.16"
criterion = "0.5.1"
ripunzip_test_utils = { path = "test_utils" }

[[bench]]
name = "ripunzip_benchmark"
harness = false

[lib]
name = "ripunzip"
path = "src/lib.rs"

[[bin]]
name = "ripunzip"
path = "src/main.rs"

[workspace]
members = ["test_utils"]
